--- a/package.json
+++ b/package.json
@@ -6,15 +6,27 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "emoji-mart": "^3.0.1",
+    "firebase": "^9.6.10",
+    "framer-motion": "^6.2.8",
     "next": "latest",
+    "next-auth": "4.0.0-beta.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "swr": "^1.2.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/emoji-mart": "^3.0.9",
+    "@types/firebase": "^3.2.1",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
+    "postcss-nesting": "^10.1.3",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
     "tailwindcss": "^3.0.7",
